--- a/css/style.css
+++ b/css/style.css
@@ -503,6 +503,7 @@ button {
   display: flex;
   height: 100%;
   margin-top: 20px;
+  flex-wrap: wrap;
 }
 .shipcart-block {
   position: relative;
@@ -782,8 +783,8 @@ button {
 .hits-img::before {
   content: "";
   position: absolute;
-  top: -1px;
-  left: 1px;
+  top: 0px;
+  left: 0px;
 
   display: block;
   width: 61px;
@@ -812,14 +813,12 @@ button {
 }
 .price-val::after {
   content: "";
-
   display: inline-block;
-  width: 31px;
-  height: 39px;
-
+  width: 32px;
+  height: 38px;
   background-image: url(../img/ruble.svg);
   background-repeat: no-repeat;
-  background-position: 3px 7px;
+  background-position: 4px 5px;
   background-size: contain;
   filter: drop-shadow(1px 0px 1px rgba(49, 50, 53, 0.48));
 }
@@ -833,8 +832,7 @@ button {
 }
 .product-foo {
   margin: 7px auto 0 auto;
-  padding: 0 6px 0 5px;
-
+  padding: 0px 6px 0 5px;
   text-align: center;
 }
 .product-name {
@@ -1047,7 +1045,7 @@ button {
   position: absolute;
   content: "";
   left: -23px;
-  top: 4px;
+  top: 2px;
   width: 15px;
   height: 13px;
   background-image: url(../img/heart.svg);
@@ -1210,8 +1208,9 @@ button {
 
 .filters-header {
   margin: 0;
+  margin-top: 1px;
+  margin-left: -1px;
   padding: 0;
-
   font-weight: 700;
   font-size: 35px;
   line-height: 41px;
@@ -1275,24 +1274,21 @@ button {
 }
 .form-submit {
   margin: 0;
-  margin-right: 19px;
+  margin-right: 18px;
   padding: 0;
 }
 .catalog-form-submit {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   width: 144px;
-  height: 37px;
+  height: 36px;
   margin: 0;
-  margin-left: 16px;
+  margin-left: 14px;
   padding: 0;
-
   font-weight: 500;
   font-size: 16px;
   line-height: 18px;
   font-family: "Roboto", Arial, sans-serif;
   color: #ffffff;
-
   background-color: rgba(255, 255, 255, 0.19);
   border-width: 2px;
   border-style: solid;
@@ -1314,6 +1310,7 @@ button {
           box-shadow: inset 0 2px 2px #0000004f;
 }
 .page-list {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1360,10 +1357,33 @@ button {
 .page-item:active a {
   color: #323232;
 }
+.page-item:first-child::before{
+  content: "";
+  cursor: pointer;
+  display: block;
+  position: absolute;
+  width: 7px;
+  height: 12px;
+  top: 8px;
+  left: -24px;
+  transform: rotate(180deg);
+  background-image: url(../img/icon-right-small.svg);
+}
+.page-item:last-child::after{
+  content: "";
+  cursor: pointer;
+  display: block;
+  position: absolute;
+  width: 7px;
+  height: 12px;
+  top: 8px;
+  left: 157px;
+  background-image: url(../img/icon-right-small.svg);
+}
 .range {
   position: relative;
 
-  margin-top: 4px;
+  margin-top: 3px;
   padding: 4px 0 10px 21px;
 
   background-color: rgba(255, 255, 255, 0.2);
@@ -1407,11 +1427,11 @@ button {
 }
 .range-left {
   top: 8px;
-  left: 34px;
+  left: 33px;
 }
 .range-right {
   top: 8px;
-  left: 132px;
+  left: 131px;
 }
 .filter-form {
   font-size: 14px;
@@ -1444,7 +1464,7 @@ button {
   align-items: center;
   height: 36px;
   margin: 0;
-  padding: 0 16px 0 5px;
+  padding: 0 16px 2px 4px;
 
   background-color: rgba( 255, 255, 255, 0.2 );
   border-radius: 30px;
@@ -1548,7 +1568,7 @@ button {
   height: 36px;
   margin: 0;
   padding-right: 20px;
-  padding-left: 4px;
+  padding-left: 3px;
 
   background-color: rgba( 255, 255, 255, 0.2 );
   border-radius: 30px;
@@ -1668,19 +1688,18 @@ button {
 }
 
 .header-icon {
-  display: -webkit-box;
-  display: -ms-flexbox;
+    display: -webkit-box;
+    display: -ms-flexbox;
   display: flex;
   width: 267px;
   margin-left: 316px;
   padding-top: 13px;
   padding-right: 1px;
   padding-bottom: 11px;
-  padding-left: 4px;
-
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -ms-flex-pack: distribute;
+  padding-left: 3px;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -ms-flex-pack: distribute;
 }
 .popup-links {
   display: -webkit-box;
@@ -1771,16 +1790,20 @@ button {
 }
 .switch-modify::before {
   content: "";
-
+  cursor: pointer;
   display: inline-block;
   width: 20px;
   height: 20px;
-
   vertical-align: baseline;
 
   border: 2px solid #ffffff;
   border-radius: 50%;
 }
+.switch-modify::before:focus {
+  outline-color: rgba(46, 136, 228, 0.54);
+
+}
+
 .switch-modify:nth-child(2)::before {
   margin-left: 5px;
 }
@@ -2216,8 +2239,11 @@ button {
           box-sizing: border-box;
   width: 1200px;
   margin: 0 auto;
-  margin-top: 18px;
+  margin-top: 16px;
   padding: 0 25px 22px 27px;
+}
+.footer-wrap-index {
+  margin-top: 18px;
 }
 .footer-social {
   width: 267px;
@@ -2229,33 +2255,33 @@ button {
   display: -ms-flexbox;
   display: flex;
 }
-.social-item {
-  margin-right: 12px;
+
+.social-item:first-child {
+  margin-right: 11px;
+}
+.social-item:nth-child(2) {
+  margin-right: 11px;
+}
+.social-item:nth-child(3) {
+  margin-right: 10px;
 }
 .footer-menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   align-content: center;
   align-items: center;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   width: 560px;
   margin: 0 auto;
   padding-top: 3px;
   padding-right: 80px;
   padding-left: 138px;
-
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -ms-flex-line-pack: center;
-  -ms-flex-wrap: wrap;
 }
 .footer-banner {
   width: 267px;
   margin-left: auto;
   padding-left: 77px;
+  padding-top: -2px;
 }
 /*  Catalog   */
 .main-container-catalog {
@@ -2269,7 +2295,7 @@ button {
   display: -ms-flexbox;
   display: flex;
   justify-content: space-around;
-  width: 232px;
+  width: 228px;
 
   -ms-flex-pack: distribute;
 }
@@ -2286,7 +2312,7 @@ button {
     display: -webkit-box;
     display: -ms-flexbox;
       display: flex;
-  padding-top: 5px;
+  padding-top: 4px;
 
 }
 .catalog-form-wrapper {
@@ -2301,7 +2327,7 @@ button {
   display: flex;
   justify-content: flex-end;
   margin-top: 45px;
-  padding-right: 24px;
+  padding-right: 25px;
   padding-bottom: 31px;
 
   text-align: right;
