--- a/css/style.css
+++ b/css/style.css
@@ -167,10 +167,11 @@ button {
   border-radius: 30px;
 }
 
-.menu-link span {
+.menu-link span:not(.shadow-off) {
   -webkit-box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.2);
           box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.2);
 }
+
 .menu-item {
   height: 100%;
 }
