--- a/css/style.css
+++ b/css/style.css
@@ -1907,7 +1907,7 @@ button {
   padding-bottom: 23px;
   padding-left: 18px;
 
-  background-image: url(../img/malinki.jpg);
+  background-image: url(../img/raspberries.jpg);
   background-repeat: repeat;
   background-position: center;
 }
@@ -2134,7 +2134,7 @@ button {
   padding-left: 19px;
 
   background-image: url(../img/strawberry.jpg);
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-position: -28px -68px;
 }
 .news-item-bg2 {
@@ -2236,7 +2236,8 @@ button {
 .mapcart {
   width: 100%;
   height: 429px;
-
+  background-image: url(../img/maps.png);
+  background-repeat: no-repeat;
   border: none;
 }
 
