--- a/css/style.css
+++ b/css/style.css
@@ -1123,6 +1123,9 @@ button {
   margin: 0;
   margin-top: 20px;
 }
+.callback-text-area {
+  max-width: 428px;
+}
 .callback-name .type-text {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
