--- a/css/style.css
+++ b/css/style.css
@@ -865,7 +865,6 @@ body {
           filter: drop-shadow(1px 0px 1px rgba(49, 50, 53, 0.48));
 }
 .product-foo {
-  margin: 7px auto 0 auto;
   padding: 0 6px 0 5px;
 
   text-align: center;
@@ -880,29 +879,16 @@ body {
           box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.2);
 }
 .catalog-invisible-button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 200px;
-  height: 44px;
-  margin-top: 7px;
-  margin-left: 28px;
-  padding-top: 10px;
-
+  display: block;
+  width: 203px;
+  margin: 15px auto;
+  padding: 10px 10px 10px 10px;
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
   text-align: center;
   color: #fefefe;
-
-  border-radius: 30px;
-
-  -webkit-box-align: center;
-  -webkit-box-pack: center;
-  -ms-flex-align: center;
-  -ms-flex-pack: center;
+  border-radius: 20px;
 }
 .seo-header {
   padding-left: 0;
@@ -1808,7 +1794,7 @@ body {
 .main-container {
   width: 1200px;
   margin: 0 auto;
-  padding: 0 28px;
+  padding: 0 14px;
 }
 
 .control-block {
@@ -1818,7 +1804,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   align-items: baseline;
-  margin-top: 457px;
+  margin: 457px 15px 40px;
   padding-right: 106px;
 
   -webkit-box-align: baseline;
@@ -1938,7 +1924,7 @@ body {
   justify-content: space-between;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  margin: 40px auto 0;
+  margin: 0 13px;
 
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
@@ -2053,7 +2039,8 @@ body {
 
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  margin: 40px auto 0;
+  margin: 33px auto 0;
+  padding-bottom: 19px;
 }
 .catalog-block {
   padding-left: 5px;
@@ -2075,14 +2062,16 @@ body {
 }
 
 .catalog-invisible-button {
-  display: none;
 }
+/*
 .hits-item,
 .catalog-item {
   position: relative;
 
-  width: 267px;
-}
+  width: 293px;
+  height: 406px;
+  padding: 7px 13px 0 13px;
+}*/
 .catalog-item {
   margin-bottom: 37px;
 }
@@ -2090,7 +2079,7 @@ body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   width: 1146px;
-  margin: 38px auto 0;
+  margin: 0 auto;
   padding: 25px 0 23px 21px;
 
   background-image: url(../img/index-wafers.jpg);
@@ -2418,28 +2407,44 @@ body {
   -webkit-box-pack: end;
   -ms-flex-pack: end;
 }
+
 .catalog-item-inner img {
   width: 267px;
   height: 267px;
 }
+.catalog-item-inner {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 293px;
+  padding: 7px 13px 0 13px;
 
+}
 
-.catalog-item-inner:hover {
-  position: absolute;
-  top: -7px;
-  left: -13px;
+.hits-item:hover .catalog-item-inner {
   z-index: 2;
 
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   width: 293px;
-  height: 406px;
   padding: 7px 13px 0 13px;
 
   background-color: rgba(248, 247, 244, 0.2);
   border-radius: 5px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
-.catalog-item-inner:hover .catalog-invisible-button {
+.product-foo-hidden{
+  display: none;
+  position: absolute;
+  z-index: 2;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 293px;
+  background-color: rgba(248, 247, 244, 0.2);
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+.hits-item:hover .product-foo-hidden{
   display: block;
 }
