--- a/css/style.css
+++ b/css/style.css
@@ -865,7 +865,7 @@ body {
           filter: drop-shadow(1px 0px 1px rgba(49, 50, 53, 0.48));
 }
 .product-foo {
-  padding: 0 6px 0 5px;
+  padding: 7px 6px 0 5px;
 
   text-align: center;
 }
@@ -2033,7 +2033,13 @@ body {
   -webkit-box-pack: center;
 }
 
-.hits-block,
+.hits-block {
+  position: relative;
+
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 33px auto 0;
+}
 .catalog-block {
   position: relative;
 
@@ -2042,36 +2048,24 @@ body {
   margin: 33px auto 0;
   padding-bottom: 19px;
 }
-.catalog-block {
-  padding-left: 5px;
+
+.hits-list{
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+
 }
-.hits-list,
 .catalog-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
 
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
 }
 .catalog-list {
   flex-wrap: wrap;
 
   -ms-flex-wrap: wrap;
 }
-
-.catalog-invisible-button {
-}
-/*
-.hits-item,
-.catalog-item {
-  position: relative;
-
-  width: 293px;
-  height: 406px;
-  padding: 7px 13px 0 13px;
-}*/
 .catalog-item {
   margin-bottom: 37px;
 }
@@ -2079,7 +2073,7 @@ body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   width: 1146px;
-  margin: 0 auto;
+  margin: 38px auto 0;
   padding: 25px 0 23px 21px;
 
   background-image: url(../img/index-wafers.jpg);
@@ -2167,6 +2161,7 @@ body {
           box-sizing: border-box;
   margin: 0 auto;
   margin-top: 40px;
+  padding: 0 13px;  
 
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
@@ -2357,18 +2352,19 @@ body {
 /*  Catalog   */
 .main-container-catalog {
   width: 1200px;
-  margin: 17px auto;
-  padding: 0 27px 0 23px;
+  margin: 11px auto;
+  padding: 0 14px;
 }
 
 .breadcrumbs-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
-  width: 228px;
 
   -ms-flex-pack: distribute;
+}
+.breadcrumbs-block {
+  padding: 0 14px;
 }
 .breadcrumbs-item:not(:last-child)::after {
   content: "»";
@@ -2376,7 +2372,7 @@ body {
 
   display: inline-block;
   margin-left: 3px;
-
+  margin-right: 6px;
   vertical-align: baseline;
 }
 .sort-wrapper {
@@ -2389,7 +2385,7 @@ body {
   margin-top: 23px;
 }
 .filters-block {
-  padding-left: 5px;
+  padding-left: 14px;
 }
 .page-block {
   display: -webkit-box;
@@ -2433,6 +2429,19 @@ body {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
 }
+.catalog-item:hover .catalog-item-inner {
+  z-index: 2;
+
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 293px;
+  padding: 7px 13px 0 13px;
+
+  background-color: rgba(248, 247, 244, 0.2);
+  border-radius: 5px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
 
 .product-foo-hidden{
   display: none;
@@ -2446,5 +2455,8 @@ body {
   border-bottom-right-radius: 5px;
 }
 .hits-item:hover .product-foo-hidden{
+  display: block;
+}
+.catalog-item:hover .product-foo-hidden{
   display: block;
 }
