--- a/css/style.css
+++ b/css/style.css
@@ -2271,7 +2271,8 @@ body {
   border-radius: 5px;
 }
 .subscribe-input:hover {
-  padding: 11px 19px 11px 13px;
+  padding: 10px 19px 10px 12px;
+  border: 2px solid #d3d3d2;
 }
 .subscribe-input:focus {
   padding: 11px 19px 11px 14px;
