Добавляет outline для фильтра

--- a/css/style.css
+++ b/css/style.css
@@ -1608,6 +1608,9 @@ body {
 .radio-filter:disabled + .radio-value::before {
   opacity: 0.5;
 }
+.radio-filter:focus + .radio-value::before {
+  outline: 2px solid rgba(46, 136, 228, 0.54);
+}
 .filler-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1716,6 +1719,9 @@ body {
   margin-right: 8px;
 
   background-image: url(../img/checkbox-on.svg);
+}
+.checkbox-filter:focus + .checkbox-value::before {
+  outline: 2px solid rgba(46, 136, 228, 0.54);
 }
 /* flexbox*/
 .header-container {
@@ -1923,7 +1929,6 @@ body {
 .radio-slide[id="switch2"]:checked ~ .site-wrapper label[for="switch2"]::before,
 .radio-slide[id="switch3"]:checked ~ .site-wrapper label[for="switch3"]::before {
   background-color: #ffffff;
-  outline: 1px;
 }
 .radio-slide[id="switch1"]:checked ~ .site-wrapper .slide-image1,
 .radio-slide[id="switch2"]:checked ~ .site-wrapper .slide-image2,
@@ -1936,7 +1941,7 @@ body {
 .radio-slide[id="switch1"]:focus ~ .site-wrapper label[for="switch1"]::before,
 .radio-slide[id="switch2"]:focus ~ .site-wrapper label[for="switch2"]::before,
 .radio-slide[id="switch3"]:focus ~ .site-wrapper label[for="switch3"]::before {
-  outline: 1px solid rgba(46, 136, 228, 0.52);
+  outline: 2px solid rgba(46, 136, 228, 0.52);
 }
 .radio-slide:checked ~ .slider {
   display: -webkit-box;
